# 1912

./: index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  constants.ts  db.ts  index.css  main.tsx  store.ts  types.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Cards.tsx  CommandMenu.tsx  ContextMenu.tsx  CustomModal.tsx  ErrorBoundary.tsx  HighlightText.tsx  HistoryView.tsx  NavigationHeader.tsx  ProjectView.tsx  ProjectsOverview.tsx  Sidebar.tsx  ui-elements.tsx
src/hooks/: useAppLogic.ts  useClipboardMonitor.ts  useImportExport.ts  useKeyboardShortcuts.ts  useSelectionMode.ts  useStorage.ts
src/lib/: logger.ts  storage.ts  utils.ts
